# BlockGen

./: .gitignore  README.md  data_sources.md  mkdocs.yml  notes.md  pyproject.toml  references.md  research.md  results.md  roadmap.md  setup.py
blockgen/: config.py  experiments.py  experiments_analysis.py  experiments_gen.py  experiments_grabcraft.py  experiments_ideas.py  experiments_native.py  experiments_overnight.py  experiments_p4c.py  experiments_transfer.py
blockgen/curation/: __init__.py  corpus.py  curate.py  (+1 more)
configs/: README.md
data/: block_ids.csv  download.py  helper.py  list.txt
deploy/: README.md
docs/: architecture.md  data-and-curation.md  experiments.md  getting-started.md  index.md  labeling.md  minecraftace.md  models.md  representations.md  reproduce-native.md  results.md  roadmap.md
notebooks/: attention_autoregressive_structure_generation.ipynb  block_tokenizer_and_embedding.ipynb  data_curation.ipynb  experiments_compare.ipynb  graph_data_and_model_walkthrough.ipynb  pyg_large_graph_generator.ipynb  render_dataset_examples.ipynb  vocab.txt
scripts/: eval_mv_conditioning.py  pause_ideas.sh  render_cond_samples.py  render_cond_showcase.py  render_decimation.py  render_generation_video.py  render_minecraftace_samples.py  render_model_samples.py  render_mv_comparison.py  render_native_samples.py  render_transfer_samples.py  resume_ideas.sh  run_ideas.sh  run_overnight.sh  run_semantic_prior.py  sample_conditioned.py  score_arms_perceptual.py  train_cond_resampler.py  train_uncond_corpus.py  validate_perceptual.py  vlm_price_probe.py
(+97 files in other folders)
